# simple-network-games

./: .gitignore  README.md
backend/gameserver-java/: pom.xml
backend/gameserver-java/src/main/java/com/songday/game/handler/: AbstractRoomHandler.java  DrawRoomHandler.java  LobbyHandler.java  SnakeRoomHandler.java  WebSocketConfig.java
backend/gameserver-java/src/main/java/com/songday/game/service/: LobbyService.java
backend/gameserver-java/src/main/java/com/songday/game/util/: JsonUtils.java
backend/gameserver-java/src/main/java/com/songday/game/vo/: RoomData.java  RoomType.java  SnakeRoomData.java
backend/gameserver-rust/: Cargo.toml  build.rs
backend/gameserver-rust/src/: lib.rs  main.rs
backend/gameserver-rust/src/data/: app.rs  mod.rs  room.rs
backend/gameserver-rust/src/handler/: assets.rs  assets.txt  default.rs  draw.rs  lobby.rs  mod.rs  rps.rs  snake.rs  unknown.rs
backend/gameserver-rust/src/server/: app.rs  mod.rs  router.rs
backend/gameserver-rust/src/util/: mod.rs  result.rs
backend/java/: pom.xml
backend/java/src/main/java/com/songday/game/: GameApplication.java
backend/java/src/main/java/com/songday/game/handler/: DrawRoomHandler.java
backend/rust/gameserver/: Cargo.toml
backend/rust/gameserver/src/handler/: draw.rs
draw/: draw.html
frontend/html/: common.js  draw.html  lobby.html  snake.html
frontend/html/assets/: common.css  common.js
frontend/html/games/: draw.html  snake.html
