[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version ="0.6", features = ["headers", "ws"]}
futures = {version = "0.3"}
lazy_static = "1.4"
lazy-static-include = "3"
scru128 = "2.4.0"
serde = {version = "1", features=["derive"]}
serde_json = "1.0"
tokio = {version = "1.24", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"]}

[build-dependencies]
flate2 = "1.0"
